--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
 	<div class="bg zeroOne"></div>
 	<div id="headerCont" class="aboveBg">
 		<!-- <h1><span>Prop</span>erty &amp; <br><span>&nbsp;Priv</span>acy Rights <span id="tabbing"></span>Alliance</h1> -->
-		<h1><span>Prop</span>erty &amp; <br><span>Priv</span>acy Rights <span id="tabbing"></span>Alliance</h1>
+        <!-- <h1><span>Prop</span>erty &amp; <br><span>Priv</span>acy Rights <span id="tabbing"></span>Alliance</h1> -->
+        <h1>the Alliance for<br><span>Prop</span>erty &amp; <br><span>Priv</span>acy Rights <span id="tabbing"></span> Protection</h1>
 		<!-- <h1>Open Crypto Freedom Alliance</h1> -->
 		<br>
-		<h2>Cypherpunks write open code.  We fund them.</h2>
+		<h2>Cypherpunks write code.  We fund them.</h2>
 
 	</div>
 	<!-- <div id="headerCorner"></div> -->
@@ -59,10 +60,10 @@
 
 
 <div id="content">
-	<h1>Announcing the Open Crypto Freedom Alliance</h1>
+	<h1>Announcing: the Alliance for Property and Privacy Rights Protection</h1>
 
 	<h2>Mission Statement</h2>
-Our mission is to promote human rights by transparently funding the development of free open-source software which protects and improves personal freedom through cryptography, with a special emphasis on financial and decentralized applications.
+Our cause: the advancement of property and privacy rights for the underprivileged, and for broad public benefit, through code. PropPriv provides transparent funding to select, open-source, software/hardware projects that advance our cause.<br><br>When it comes to protecting rights and freedoms, we believe that code is much more effective than alternate methods (lawsuits, Amicus briefs, lobbyists, etc.) There are already other associations who use those methods, but we will use code.
 	<h3>Impetus</h3>
 
 The 
@@ -72,13 +73,13 @@ The
  and proposed controls such as SOPA and the
 <a href="http://motherboard.vice.com/read/leaked-burr-feinstein-encryption-bill-is-a-threat-to-american-privacy">Burr-Feinstein Anti-Encryption Bill</a>,
 
-have made it clear that governments and corporations should not be blindly trusted to uphold the protection of individual autonomy and collective freedom. 
+have made it clear that governments and corporations cannot be blindly trusted to uphold the protection of individual autonomy and collective freedom.
 
 Those in power are actively employing legal and extralegal means to violate our liberties. It is now undeniable that governments and for-profit corporations cannot be blindly trusted to protect individual autonomy and freedom. The threat of force leaves all of us open to backdoors, key theft, and the impersonation of trusted entities.
  Only free, publicly available, open source software - unencumbered by shareholder obligations and political pressure – can stand against these attacks. The use of cryptography, combined with publicly transparent development and review, has the best chance of protecting our basic human rights, and the rights of every generation that follows.
 
 	<!-- <h3>To be clear:</h3>
-	We will not fund lobbying. We will not fund legal cases. We will only fund coding of open-source software that has a direct, positive impact on freedom through cryptography.<br> -->
+	We will not fund lobbying. We will not fund legal cases. We will only fund coding of open-source projects that have a direct, positive impact on freedom through cryptography.<br> -->
 
 	<h2>Who are we?</h2>
 	<div id="bios_links" class="tab">
@@ -95,7 +96,7 @@ Those in power are actively employing legal and extralegal means to violate our 
 
 
 	<!-- <h2>How can I contribute?</h2>
-	If you want to help us help you, there are a few easy options.  The first is getting the word out.  Let your coder friends know that we're here to help.  If you know of some great open-source crypto projects, help us get in touch with them.  If you have a few crypto coins to spare, <a href="donate.html" style="color:#35AE36"><b>donate</b></a>.  Share the hashtags #OCFA and #OpenCryptoFreedomAliance (twitter link at the bottom) wherever hashtags roam, or make a post in one of the crypto coding and freedom communities you frequent.  If nothing else, spare some good will, positiviy is as supportive as negativity is caustic. -->
+	If you want to help us help you, there are a few easy options.  The first is getting the word out.  Let your coder friends know that we're here to help.  If you know of some great open-source crypto projects, help us get in touch with them.  If you have a few crypto coins to spare, <a href="donate.html" style="color:#35AE36"><b>donate</b></a>.  Share the hashtag #PropPriv (twitter link at the bottom) wherever hashtags roam, or make a post in one of the crypto coding and freedom communities you frequent.  If nothing else, spare some good will, positivity is as supportive as negativity is caustic. -->
 
 
 <br>
