added projects changes
Signed-off-by: FellowTraveler <F3llowTraveler@gmail.com>

--- a/projects.html
+++ b/projects.html
@@ -102,20 +102,32 @@
 			<div class="addr">1BvBMSEYstWetqTFn5Au4m4GFg7xJaNVN2</div>
 		</div>
 		<div>
-			This is a woop da loop la go This is a woop da loop la go This is a woop da loop la go This is a woop da loop la go This is a woop 
+			Bitmessage is a decentralized and trustless P2P communications protocol used to send encrypted messages to another person or to many subscribers.
 		</div>
 	</div>
 
 
 	<div class="projItem">
-		<h1><a href="">BitMessage<span class="codelink github"></span></a></h1>
+		<h1><a href="">Tahoe-LAFS<span class="codelink github"></span></a></h1>
 		<div class="projDonate">
 			<center><span class="btc">Donate</span></center>
 			<a class="qr" href="public/QR_code.png"><img src="public/QR_code.png"></a>
 			<div class="addr">1BvBMSEYstWetqTFn5Au4m4GFg7xJaNVN2</div>
 		</div>
 		<div>
-			This is a woop da loop la go This is a woop da loop la go This is a woop da loop la go This is a woop da loop la go This is a woop This is a woop da loop la go This is a woop da loop la go This is a woop da loop la go This is a woop da loop la go This is a woop This is a woop da loop la go This is a woop da loop la go This is a woop da loop la go This is a woop da loop la go This is a woop 
+			Tahoe-LAFS is a free and open decentralized cloud storage system, distributing a user’s data across multiple servers
+		</div>
+	</div>
+
+	<div class="projItem">
+		<h1><a href="">OpenDHT<span class="codelink github"></span></a></h1>
+		<div class="projDonate">
+			<center><span class="btc">Donate</span></center>
+			<a class="qr" href="public/QR_code.png"><img src="public/QR_code.png"></a>
+			<div class="addr">1BvBMSEYstWetqTFn5Au4m4GFg7xJaNVN2</div>
+		</div>
+		<div>
+			OpenDHT implements a Distributed Hash Table (DHT) of the Kademlia kind. A DHT can be viewed as a dictionary service distributed over a network: it provides access to a common shared key->value data-store, distributed over participating nodes with great performance and scalability.
 		</div>
 	</div>
 
@@ -127,10 +139,22 @@
 			<div class="addr">1BvBMSEYstWetqTFn5Au4m4GFg7xJaNVN2</div>
 		</div>
 		<div>
-			This is a woop da loop la go This is a woop da loop la go This is a woop da loop la go This is a woop da loop la go This is a woop This is a woop da loop la go This is a woop da loop la go This is a woop da loop la go This is a woop da loop la go This is a woop 
-			This is a woop da loop la go This is a woop da loop la go This is a woop da loop la go This is a woop da loop la go This is a woop 
+			The Open-Transactions project is a collaborative effort to develop a robust, commercial-grade, fully-featured, free-software toolkit implementing the OTX protocol as well as a full-strength financial cryptography library, API, GUI, command-line interface, and prototype notary server.
 		</div>
 	</div>
+
+	<div class="projItem">
+		<h1><a href="">Bitcoin in Go<span class="codelink github"></span></a></h1>
+		<div class="projDonate">
+			<center><span class="btc">Donate</span></center>
+			<a class="qr" href="public/QR_code.png"><img src="public/QR_code.png"></a>
+			<div class="addr">1BvBMSEYstWetqTFn5Au4m4GFg7xJaNVN2</div>
+		</div>
+		<div>
+			An open-source Bitcoin solution , Bitcoin in Go provides a  suite of packages and tools for working with Bitcoin in Go (golang) including btcd, a full node, mining capable, and Bitcoin implementation.
+		</div>
+	</div>
+
 
 	<br>
 	<h1>Current Bounties</h1>
