--- a/FAQ.html
+++ b/FAQ.html
@@ -14,7 +14,7 @@
 	<div class="bg zeroOne"></div>
 	<div id="headerCont" class="aboveBg smallHeader">
 		<a href="index.html"><h1>PropPriv</h1></a>
-		<h2>Property &amp; Privacy Rights Alliance</h2>
+		<h2>Alliance for Property &amp; Privacy Rights Protection</h2>
 	</div>
 	<div id="siteMap">
 		<a href="index.html">Home
@@ -27,13 +27,41 @@
 
 <div id="content">
 
-Coming soooon......<br>
-<a href="#staffPick">Who do you choose for staff pick donations?</a><br>
-<a href="#projBountie">How do I add a Project or Bountie?</a><br>
+<h1>FAQ</h1><br>
+<a href="#q1">Do the Directors get paid?</a><br>
+<a href="#q2">Where is PropPriv located?</a><br>
+<a href="#q3">Can I see where donor funds go?</a><br>
+<a href="#q4">What forms of payments for donations are accepted?</a><br>
+<a href="#q5"></a><br>
+<a href="#q6"></a><br>
+<a href="#q7"></a><br>
+<a href="#q8"></a><br>
 <br>
 
-<h2 id="staffPick">Who do you choose for staff pick donations?</h2>
-<h2 id="projBountie">How do I add a Project or Bountie?</h2>
+<h2 id="q1">Do the Directors get paid?</h2>
+
+<b>No</b>, the Directors do not currently get paid. The directors are donating their time and resources on their own dime.<br><br>PropPriv intends to have a small staff to help coordinate and organize future projects.<br><br>
+
+<h2 id="q2">Where is PropPriv located? </h2>
+
+Central Texas, USA.<br><br>
+
+<h2 id="q3">Can I see where donor funds go?</h2>
+
+Transparency of all funds will be listed on the PropPriv.org website.<br><br>
+
+<h2 id="q4">What forms of payments for donations are accepted?</h2>
+
+Currently, only Bitcoin is accepted.<br><br>
+
+In the near future, other cryptocurrencies, in addition to credit cards and PayPal will be accepted.<br><br>
+
+501(c)(3) status in the USA (and other countries) is planned, and will be implemented for tax-free donations.<br><br>
+
+<h2 id="q5"></h2>
+<h2 id="q6"></h2>
+<h2 id="q7"></h2>
+<h2 id="q8"></h2>
 
 
 
