--- a/donate.html
+++ b/donate.html
@@ -22,7 +22,7 @@
 	<div class="bg zeroOne"></div>
 	<div id="headerCont" class="aboveBg smallHeader">
 		<a href="index.html"><h1>PropPriv</h1></a>
-		<h2>Property &amp; Privacy Rights Alliance</h2>
+		<h2>Alliance for Property &amp; Privacy Rights Protection</h2>
 	</div>
 	<div id="siteMap">
 		<a href="index.html">Home
