--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<div id="headerCont" class="aboveBg">
 		<!-- <h1><span>Prop</span>erty &amp; <br><span>&nbsp;Priv</span>acy Rights <span id="tabbing"></span>Alliance</h1> -->
         <!-- <h1><span>Prop</span>erty &amp; <br><span>Priv</span>acy Rights <span id="tabbing"></span>Alliance</h1> -->
-        <h1>the Alliance for<br><span>Prop</span>erty &amp; <br><span>Priv</span>acy Rights <span id="tabbing"></span> Protection</h1>
+        <h1>Alliance for<br><span>Prop</span>erty &amp; <br><span>Priv</span>acy Rights <span id="tabbing"></span> Protection</h1>
 		<!-- <h1>Open Crypto Freedom Alliance</h1> -->
 		<br>
 		<h2>Cypherpunks write code.  We fund them.</h2>
@@ -60,10 +60,10 @@
 
 
 <div id="content">
-	<h1>Announcing: the Alliance for Property and Privacy Rights Protection</h1>
+	<h1><em>Announcing:</em><br>The Alliance for Property and Privacy Rights Protection</h1>
 
 	<h2>Mission Statement</h2>
-Our cause: the advancement of property and privacy rights for the underprivileged, and for broad public benefit, through code. PropPriv provides transparent funding to select, open-source, software/hardware projects that advance our cause.<br><br>When it comes to protecting rights and freedoms, we believe that code is much more effective than alternate methods (lawsuits, Amicus briefs, lobbyists, etc.) There are already other associations who use those methods, but we will use code.
+Our cause is the protection and advancement of property and privacy rights for the underprivileged, and for broad public benefit, through code. PropPriv provides transparent funding for select, open-source, software/hardware projects that advance our cause.<br><br>We believe that code is much more effective at protecting rights and freedoms, when compared to alternate methods (lawsuits, Amicus briefs, lobbyists, etc.) There are already other associations who use those methods, but we will use code.
 	<h3>Impetus</h3>
 
 The 
@@ -73,10 +73,10 @@ The
  and proposed controls such as SOPA and the
 <a href="http://motherboard.vice.com/read/leaked-burr-feinstein-encryption-bill-is-a-threat-to-american-privacy">Burr-Feinstein Anti-Encryption Bill</a>,
 
-have made it clear that governments and corporations cannot be blindly trusted to uphold the protection of individual autonomy and collective freedom.
+have made it clear that governments and corporations cannot be blindly trusted to protect our privacy and autonomy.
 
-Those in power are actively employing legal and extralegal means to violate our liberties. It is now undeniable that governments and for-profit corporations cannot be blindly trusted to protect individual autonomy and freedom. The threat of force leaves all of us open to backdoors, key theft, and the impersonation of trusted entities.
- Only free, publicly available, open source software - unencumbered by shareholder obligations and political pressure – can stand against these attacks. The use of cryptography, combined with publicly transparent development and review, has the best chance of protecting our basic human rights, and the rights of every generation that follows.
+It is now undeniable that those in power are actively employing legal and extralegal means to violate our rights. The threat of force leaves all of us open to backdoors, key theft, and the impersonation of trusted entities.
+ Only free, publicly available, open source software – unencumbered by shareholder obligations and political pressure – can stand against these attacks. The use of cryptography, combined with publicly transparent development and review, has the best chance of protecting our basic human rights, and the rights of every generation that follows.
 
 	<!-- <h3>To be clear:</h3>
 	We will not fund lobbying. We will not fund legal cases. We will only fund coding of open-source projects that have a direct, positive impact on freedom through cryptography.<br> -->
@@ -89,7 +89,7 @@ Those in power are actively employing legal and extralegal means to violate our 
 	</div>
 
 	<br>
-...and a growing list of donors and supporters who understand the value of strong cryptography apps for all people, everywhere.  We fund the apps and projects themselves, not lobbyists or court cases.  We want to live in a world, using 21st century tools, in which everyone can speak freely, and can safely and easily manage their own money without obstacles.
+...and a growing list of donors and supporters who understand the value of strong cryptography for all people, everywhere.  We fund the projects themselves, not lobbyists or court cases.  We want to live in a world, using 21st century tools, in which everyone can speak freely, and can safely and securely manage their own money.
 
 
 
