--- a/projects.html
+++ b/projects.html
@@ -81,7 +81,7 @@
 	<div class="bg zeroOne"></div>
 	<div id="headerCont" class="aboveBg smallHeader">
 		<a href="index.html"><h1>PropPriv</h1></a>
-		<h2>Property &amp; Privacy Rights Alliance</h2>
+		<h2>Alliance for Property &amp; Privacy Rights Protection</h2>
 	</div>
 	<div id="siteMap">
 		<a href="index.html">Home
@@ -94,67 +94,66 @@
 
 <div id="content">
 	<h1>Current Projects</h1>
+
 	<div class="projItem">
-		<h1><a href="">BitMessage<span class="codelink github"></span></a></h1>
+		<h1><a href="https://github.com/savoirfairelinux/opendht/wiki">OpenDHT<span class="codelink github"></span></a></h1>
 		<div class="projDonate">
 			<center><span class="btc">Donate</span></center>
 			<a class="qr" href="public/QR_code.png"><img src="public/QR_code.png"></a>
 			<div class="addr">1BvBMSEYstWetqTFn5Au4m4GFg7xJaNVN2</div>
 		</div>
 		<div>
-			Bitmessage is a decentralized and trustless P2P communications protocol used to send encrypted messages to another person or to many subscribers.
+			OpenDHT implements a Distributed Hash Table (DHT) of the Kademlia kind. A DHT can be viewed as a dictionary service distributed over a network: it provides access to a common shared key/value datastore, distributed over participating nodes with great performance and scalability.
 		</div>
 	</div>
-
-
+    
 	<div class="projItem">
-		<h1><a href="">Tahoe-LAFS<span class="codelink github"></span></a></h1>
+		<h1><a href="https://github.com/Bitmessage">BitMessage<span class="codelink github"></span></a></h1>
 		<div class="projDonate">
 			<center><span class="btc">Donate</span></center>
 			<a class="qr" href="public/QR_code.png"><img src="public/QR_code.png"></a>
 			<div class="addr">1BvBMSEYstWetqTFn5Au4m4GFg7xJaNVN2</div>
 		</div>
 		<div>
-			Tahoe-LAFS is a free and open decentralized cloud storage system, distributing a user’s data across multiple servers
+			<a href="https://bitmessage.org/">Bitmessage</a> is a P2P communications protocol used to send encrypted messages to another person or to many subscribers. It is decentralized and trustless, meaning that you need-not inherently trust any entities like root certificate authorities. It uses strong authentication which means that the sender of a message cannot be spoofed, and it aims to hide "non-content" data, like the sender and receiver of messages, from passive eavesdroppers like those running warrantless wiretapping programs.
 		</div>
 	</div>
-
+    
 	<div class="projItem">
-		<h1><a href="">OpenDHT<span class="codelink github"></span></a></h1>
+		<h1><a href="https://github.com/tahoe-lafs/tahoe-lafs">Tahoe-LAFS<span class="codelink github"></span></a></h1>
 		<div class="projDonate">
 			<center><span class="btc">Donate</span></center>
 			<a class="qr" href="public/QR_code.png"><img src="public/QR_code.png"></a>
 			<div class="addr">1BvBMSEYstWetqTFn5Au4m4GFg7xJaNVN2</div>
 		</div>
 		<div>
-			OpenDHT implements a Distributed Hash Table (DHT) of the Kademlia kind. A DHT can be viewed as a dictionary service distributed over a network: it provides access to a common shared key->value data-store, distributed over participating nodes with great performance and scalability.
+			<a href="https://www.tahoe-lafs.org/trac/tahoe-lafs">Tahoe-LAFS</a> is a free and open decentralized cloud storage system, distributing a user’s data across multiple servers. Even if some of the servers fail or are taken over by an attacker, the entire file store continues to function correctly, preserving privacy and security.
 		</div>
 	</div>
 
 	<div class="projItem">
-		<h1><a href="">Open Transactions<span class="codelink github"></span></a></h1>
+		<h1><a href="https://github.com/btcsuite/btcd">Bitcoin in Go<span class="codelink github"></span></a></h1>
 		<div class="projDonate">
 			<center><span class="btc">Donate</span></center>
 			<a class="qr" href="public/QR_code.png"><img src="public/QR_code.png"></a>
 			<div class="addr">1BvBMSEYstWetqTFn5Au4m4GFg7xJaNVN2</div>
 		</div>
 		<div>
-			The Open-Transactions project is a collaborative effort to develop a robust, commercial-grade, fully-featured, free-software toolkit implementing the OTX protocol as well as a full-strength financial cryptography library, API, GUI, command-line interface, and prototype notary server.
+			An open-source Bitcoin solution, Bitcoin in Go provides a  suite of packages and tools for working with Bitcoin in Go (golang) including btcd, a full node, mining capable, and Bitcoin implementation.
 		</div>
 	</div>
 
 	<div class="projItem">
-		<h1><a href="">Bitcoin in Go<span class="codelink github"></span></a></h1>
+		<h1><a href="https://github.com/Open-Transactions/opentxs">Open-Transactions<span class="codelink github"></span></a></h1>
 		<div class="projDonate">
 			<center><span class="btc">Donate</span></center>
 			<a class="qr" href="public/QR_code.png"><img src="public/QR_code.png"></a>
 			<div class="addr">1BvBMSEYstWetqTFn5Au4m4GFg7xJaNVN2</div>
 		</div>
 		<div>
-			An open-source Bitcoin solution , Bitcoin in Go provides a  suite of packages and tools for working with Bitcoin in Go (golang) including btcd, a full node, mining capable, and Bitcoin implementation.
+			<a href="http://opentransactions.org/">Open-Transactions</a> is a financial cryptosystem based on triple-signed receipts. Users are able to perform secure transactions, even when dealing with malicious parties. Open-Transactions includes a full-strength financial cryptography library and API, desktop GUI, command-line interface, and prototype notary server.
 		</div>
 	</div>
-
 
 	<br>
 	<h1>Current Bounties</h1>
@@ -165,7 +164,7 @@
 
 
 	<br>
-	<center><a href="donate.html#wallet" id="donate_now">Staff Pick Donations</a></center>
+	<center><a href="donate.html#wallet" id="donate_now">General Fund Donations</a></center>
 	<br>
 
 	<h1>Adding Your Project or Bounty</h1>	
