--- a/FAQ.html
+++ b/FAQ.html
@@ -14,7 +14,7 @@
 	<div class="bg zeroOne"></div>
 	<div id="headerCont" class="aboveBg smallHeader">
 		<a href="index.html"><h1>PropPriv</h1></a>
-		<h2>Alliance for Property &amp; Privacy Rights Protection</h2>
+		<h2>Alliance for Property &amp; Privacy Protection</h2>
 	</div>
 	<div id="siteMap">
 		<a href="index.html">Home
@@ -44,7 +44,7 @@
 
 <h2 id="q2">Where is PropPriv located? </h2>
 
-Central Texas, USA.<br><br>
+Central Texas, USA. Our supporters, donors, and projects are worldwide.<br><br>
 
 <h2 id="q3">Can I see where donor funds go?</h2>
 
@@ -56,7 +56,7 @@ Currently, only Bitcoin is accepted.<br><br>
 
 In the near future, other cryptocurrencies, in addition to credit cards and PayPal will be accepted.<br><br>
 
-501(c)(3) status in the USA (and other countries) is planned, and will be implemented for tax-free donations.<br><br>
+501(c)(3) nonprofit status in the USA (and other countries) is planned for tax-free donations.<br><br>
 
 <h2 id="q5"></h2>
 <h2 id="q6"></h2>
