--- a/bios.html
+++ b/bios.html
@@ -14,7 +14,7 @@
 	<div class="bg zeroOne"></div>
 	<div id="headerCont" class="aboveBg smallHeader">
 		<a href="index.html"><h1>PropPriv</h1></a>
-		<h2>Alliance for Property &amp; Privacy Rights Protection</h2>
+		<h2>Alliance for Property &amp; Privacy Protection</h2>
 	</div>
 	<div id="siteMap">
 		<a href="index.html">Home
@@ -28,7 +28,7 @@
 <div id="content" class="bio">
 	<h1 id="ladar">Ladar Levison</h1>
     <br>
-	<div class="vignette"><img src="http://i2.cdn.turner.com/money/dam/assets/140721034611-private-email-ladar-levison-1024x576.png"></div>
+	<div class="vignette"><img src="http://graphics8.nytimes.com/images/2013/10/08/business/video-lavabit-bits/video-lavabit-bits-videoSixteenByNine600.jpg"></div>
 
 
 	<p>Ladar Levison founded Lavabit, a secure email service recommended by Edward Snowden.<br><br>
