--- a/donate.html
+++ b/donate.html
@@ -22,7 +22,7 @@
 	<div class="bg zeroOne"></div>
 	<div id="headerCont" class="aboveBg smallHeader">
 		<a href="index.html"><h1>PropPriv</h1></a>
-		<h2>Alliance for Property &amp; Privacy Rights Protection</h2>
+		<h2>Alliance for Property &amp; Privacy Protection</h2>
 	</div>
 	<div id="siteMap">
 		<a href="index.html">Home
@@ -34,11 +34,10 @@
 
 
 <div id="content">
-Right now, as it often has been in the past, there is an incredible amount of concentrated wealth and power which is actively directed towards keeping the population from basic human freedoms. 
 
-This is being seen more and more via the political systems globally, with onerous regulation and spying becoming almost de-facto. Many are just starting to realize this fact. 
+Many are starting to realize the degree to which global spying and onerous regulations are denying us our basic human rights, which is unhealthy for a free and productive society.
 
-Everyone should have the right to a private conversation, and the right to transact their own personal money and property.  In a worldwide connected digital age, we believe the tool which can best protect these simple freedoms is correctly implemented strong cryptography.  This can only be achieved in full view of the public (knowledge, disclosure, and review).  In short: Free open-source code.
+Everyone has the right to a private conversation, and to transact their own personal money and property.  In a worldwide connected digital age, we believe the technology which can best protect these simple freedoms is correctly implemented strong cryptography.  This can only be achieved in full view of the public (knowledge, disclosure, and review) and free of outside pressures. In short: Free open-source code.
 
 <br><br>
 
