--- a/projects.html
+++ b/projects.html
@@ -81,7 +81,7 @@
 	<div class="bg zeroOne"></div>
 	<div id="headerCont" class="aboveBg smallHeader">
 		<a href="index.html"><h1>PropPriv</h1></a>
-		<h2>Alliance for Property &amp; Privacy Rights Protection</h2>
+		<h2>Alliance for Property &amp; Privacy Protection</h2>
 	</div>
 	<div id="siteMap">
 		<a href="index.html">Home
@@ -158,7 +158,7 @@
 	<br>
 	<h1>Current Bounties</h1>
 	<div class="projItem">
-		<h1>JS Local Storage Encryption</h1>
+		<h1>JS Local Storage Encryption (proposed, pending review)</h1>
 		A simple js include which adds functionality for storing and retrieving items from window.localStorage which are encrypted and safe from prying eyes.
 	</div>
 
