--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
 <div id="header"><center>
 	<div class="bg zeroOne"></div>
 	<div id="headerCont" class="aboveBg">
-		<!-- <h1><span>Prop</span>erty &amp; <br><span>&nbsp;Priv</span>acy Rights <span id="tabbing"></span>Alliance</h1> -->
-        <!-- <h1><span>Prop</span>erty &amp; <br><span>Priv</span>acy Rights <span id="tabbing"></span>Alliance</h1> -->
-        <h1>Alliance for<br><span>Prop</span>erty &amp; <br><span>Priv</span>acy Rights <span id="tabbing"></span> Protection</h1>
+		<!-- <h1><span>Prop</span>erty &amp; <br><span>&nbsp;Priv</span>acy <span id="tabbing"></span>Alliance</h1> -->
+        <!-- <h1><span>Prop</span>erty &amp; <br><span>Priv</span>acy <span id="tabbing"></span>Alliance</h1> -->
+        <h1>Alliance for<br><span>Prop</span>erty &amp; <br><span>Priv</span>acy <span id="tabbing"></span> Protection</h1>
 		<!-- <h1>Open Crypto Freedom Alliance</h1> -->
 		<br>
-		<h2>Cypherpunks write code.  We fund them.</h2>
+		<h2>Cypherpunks write open code.</h2>
 
 	</div>
 	<!-- <div id="headerCorner"></div> -->
@@ -60,10 +60,10 @@
 
 
 <div id="content">
-	<h1><em>Announcing:</em><br>The Alliance for Property and Privacy Rights Protection</h1>
+	<h1><em>Announcing:</em><br>The Alliance for Property and Privacy Protection</h1>
 
 	<h2>Mission Statement</h2>
-Our cause is the protection and advancement of property and privacy rights for the underprivileged, and for broad public benefit, through code. PropPriv provides transparent funding for select, open-source, software/hardware projects that advance our cause.<br><br>We believe that code is much more effective at protecting rights and freedoms, when compared to alternate methods (lawsuits, Amicus briefs, lobbyists, etc.) There are already other associations who use those methods, but we will use code.
+Our cause is the protection and advancement of property and privacy rights for the underprivileged, and for broad public benefit, through code. PropPriv provides transparent funding for select, open-source, software/hardware projects that advance our cause.<br><br>We believe that code is much more effective at protecting rights and freedoms, when compared to alternate methods (lawsuits, lobbyists, <em>et cetera</em>). There are already other associations who use those methods, but we will use code.
 	<h3>Impetus</h3>
 
 The 
@@ -75,8 +75,8 @@ The
 
 have made it clear that governments and corporations cannot be blindly trusted to protect our privacy and autonomy.
 
-It is now undeniable that those in power are actively employing legal and extralegal means to violate our rights. The threat of force leaves all of us open to backdoors, key theft, and the impersonation of trusted entities.
- Only free, publicly available, open source software – unencumbered by shareholder obligations and political pressure – can stand against these attacks. The use of cryptography, combined with publicly transparent development and review, has the best chance of protecting our basic human rights, and the rights of every generation that follows.
+It is now undeniable that legal and extralegal means are being employed to violate our rights. This leaves all of us open to backdoors, key theft, and the impersonation of trusted entities.
+ Only free, publicly available, open-source software – unencumbered by shareholder obligations and political pressure – can stand against these attacks. The use of cryptography, combined with publicly transparent development and review, has the best chance of protecting our basic human rights, and the rights of every generation that follows.
 
 	<!-- <h3>To be clear:</h3>
 	We will not fund lobbying. We will not fund legal cases. We will only fund coding of open-source projects that have a direct, positive impact on freedom through cryptography.<br> -->
