update for donate
Signed-off-by: FellowTraveler <F3llowTraveler@gmail.com>

--- a/donate.html
+++ b/donate.html
@@ -49,13 +49,15 @@ WALLET ADDR HERE, w/QR Code.  BIP-47 PaymentAddress comes later.
 <br><br>
 <br>
 
-In the near future, we are planning to accept dozens of other cryptocurrencies.  And as soon as possible, also accept donations via classical fiat currencies (GBP, EUR, USD, CNY, etc.) — although we must first navigate the time-sucking financial and legal labyrinth in order to do this effectively, enabling tax-free donations.  Please stay tuned.
 
+In the near future, we are planning to accept many other cryptocurrencies. And as soon as possible, also accept donations via classical fiat currencies (such as GBP, EUR, USD, CNY). Please stay tuned.
 <br><br>
-
-We will also soon be allowing donations in which 100% of your donated funds can be earmarked for particular projects or cryptocurrencies.
-
-So if you donate even one Satoshi or other coin micro-payment, it can be transparently watched on the blockchain as it becomes a line of written crypto code published to a public software respository such as GitHub.
+The idea is that by donating a few Satoshis, they can be transparently watched on the blockchain as it becomes a line of written crypto code published to a public software repository such as GitHub.
+<br><br>
+<br><br>
+<br><br>
+<br><br>
+<br><br>
 
 </div>
 
