--- a/bios.html
+++ b/bios.html
@@ -34,11 +34,15 @@
 	<p>Ladar Levison founded Lavabit, a secure email service recommended by Edward Snowden.<br><br>
 	In August 2013, he shut it down. His note to users read:<br><br>
     
+    <div style="margin-left: 1em;">
     <em>&ldquo;I have been forced to make a difficult decision: to become complicit in crimes against the American people or walk away from nearly 10 years of hard work by shutting down Lavabit. After significant soul searching, I have decided to suspend operations. I wish that I could legally share with you the events that led to my decision. I cannot.&rdquo;</em>
+    </div>
     <br>
     <br>
     When announcing PropPriv in May 2016, he said:<br><br>
+    <div style="margin-left: 1em;">
     <em>&ldquo;The recently proposed Court Orders Act of 2016, mandating backdoors in commercial cryptography solutions, threatens the trustworthiness of commercial implementations, and leaves cybersecurity and personal freedom hanging in the balance.&rdquo;</em>
+    </div>
     <br>
     <br>
     When not busy advocating for freedom, Ladar works on the <a href="http://www.zdnet.com/article/dark-mail-debut-to-open-door-for-lavabit-return-ladar-levison/">Dark Mail</a> project.
@@ -54,7 +58,9 @@
 
 	<p>Chris Odom is the creator of the Open-Transactions project, a financial cryptosystem, and the cofounder of startup Stash.<br><br>
 	Chris is always on the lookout for open crypto projects that protect and advance the property rights of users. When announcing PropPriv, he said:<br><br>
+    <div style="margin-left: 1em;">
     <em>&ldquo;Encryption is both a First and Fourth Amendment issue, and Blockchain technology has shown us direct links to property rights as well. It is therefore vital that the technology remains available to protect our unalienable rights, since it is clear we cannot rely on corporate interests to withstand political pressure when it comes to our freedoms.&rdquo;</em>
+    </div>
     <br>
     <br>
 	</p>
@@ -68,7 +74,9 @@
 
 	<p>Cliff Baltzley is the founder of Hushmail and has been a serial entrepreneur in cryptographic software companies for over 20 years. He has been using digital currencies since the 1990s, and he believes in personal privacy for all users of the Internet.<br><br>
     When announcing PropPriv, he said:<br><br>
+    <div style="margin-left: 1em;">
     <em>&ldquo;We felt it was time for a financially transparent non-profit organization to exist, to protect human and civil rights by helping support Cypherpunks writing free and open cryptographic systems.&rdquo;</em>
+    </div>
     <br>
     <br>
     His current startup is <a href="http://www.stashcrypto.com/">Stash</a> with Chris Odom.<br>
