minor wording fixes
Signed-off-by: FellowTraveler <F3llowTraveler@gmail.com>

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 	<h1><em>Announcing:</em><br>The Alliance for Property and Privacy Protection</h1>
 
 	<h2>Mission Statement</h2>
-Our cause is the protection and advancement of property and privacy rights for the underprivileged, and for broad public benefit, through code. PropPriv provides transparent funding for select, open-source, software/hardware projects that advance our cause.<br><br>We believe that code is much more effective at protecting rights and freedoms, when compared to alternate methods (lawsuits, lobbyists, <em>et cetera</em>). There are already other associations who use those methods, but we will use code.
-	<h3>Impetus</h3>
+Our cause is the protection and advancement of property and privacy rights for the underprivileged, and for broad public benefit, through code. PropPriv provides transparent funding for select, open-source, software/hardware projects that advance our cause.<br><br>We believe that code is much more effective at protecting rights and freedoms, when compared to alternate methods (lawsuits, lobbyists, <em>et cetera</em>). There are other groups who use those methods. We plan to use code. 
+<h3>Impetus</h3>
 
 The 
 
@@ -75,7 +75,7 @@ The
 
 have made it clear that governments and corporations cannot be blindly trusted to protect our privacy and autonomy.
 
-It is now undeniable that legal and extralegal means are being employed to violate our rights. This leaves all of us open to backdoors, key theft, and the impersonation of trusted entities.
+It is now undeniable that legal and extralegal means are being employed to violate our rights. This leaves the world open to backdoors, key theft, and the impersonation of trusted entities.
  Only free, publicly available, open-source software – unencumbered by shareholder obligations and political pressure – can stand against these attacks. The use of cryptography, combined with publicly transparent development and review, has the best chance of protecting our basic human rights, and the rights of every generation that follows.
 
 	<!-- <h3>To be clear:</h3>
@@ -89,9 +89,7 @@ It is now undeniable that legal and extralegal means are being employed to viola
 	</div>
 
 	<br>
-...and a growing list of donors and supporters who understand the value of strong cryptography for all people, everywhere.  We fund the projects themselves, not lobbyists or court cases.  We want to live in a world, using 21st century tools, in which everyone can speak freely, and can safely and securely manage their own money.
-
-
+...and a growing list of donors and supporters who understand the value of strong cryptography for all people, everywhere. We fund the development of free technologies, not lawyers or lobbyists. We want to live in a world, using 21st century tools, in which everyone can speak freely, and can safely and securely manage their property and privacy.
 
 
 
