--- a/donate.html
+++ b/donate.html
@@ -28,19 +28,24 @@
 		<a href="index.html">Home
 		</a><a href="projects.html">Projects
 		</a><a href="bios.html">About Us
+        </a><a href="blog.html">Blog
         </a><a href="FAQ.html">FAQ</a>
 	</div>
 </center></div>
 
 
 <div id="content">
-
+<h1>Why Donate?</h1>
+<div>
+<br>
 Many are starting to realize the degree to which global spying and onerous regulations are denying us our basic human rights, which is unhealthy for a free and productive society.
 
 Everyone has the right to a private conversation, and to transact their own personal money and property.  In a worldwide connected digital age, we believe the technology which can best protect these simple freedoms is correctly implemented strong cryptography.  This can only be achieved in full view of the public (knowledge, disclosure, and review) and free of outside pressures. In short: Free open-source code.
 
 <br><br>
-
+</div>
+<hr>
+<br>
 If you would like to donate to our general fund, here is our Bitcoin address:
 
 <br><br>
