--- a/index.html
+++ b/index.html
@@ -53,14 +53,15 @@
 	<div id="siteMap">
 		<a href="projects.html">Projects
 		</a><a href="bios.html">About Us
-		</a><a href="donate.html">Why donate?
+        </a><a href="donate.html">Donate
+        </a><a href="blog.html">Blog
         </a><a href="FAQ.html">FAQ</a>
 	</div>
 </center></div>
 
 
 <div id="content">
-	<h1><em>Announcing:</em><br>The Alliance for Property and Privacy Protection</h1>
+	<h1><em>Announcing:</em><br>Alliance for Property and Privacy Protection</h1>
 
 	<h2>Mission Statement</h2>
 Our cause is the protection and advancement of property and privacy rights for the underprivileged, and for broad public benefit, through code. PropPriv provides transparent funding for select, open-source, software/hardware projects that advance our cause.<br><br>We believe that code is much more effective at protecting rights and freedoms, when compared to alternate methods (lawsuits, lobbyists, <em>et cetera</em>). There are other groups who use those methods. We plan to use code. 
@@ -73,7 +74,7 @@ The
  and proposed controls such as SOPA and the
 <a href="http://motherboard.vice.com/read/leaked-burr-feinstein-encryption-bill-is-a-threat-to-american-privacy">Burr-Feinstein Anti-Encryption Bill</a>,
 
-have made it clear that governments and corporations cannot be blindly trusted to protect our privacy and autonomy.
+have made it clear that governments and corporations cannot be blindly trusted to protect our privacy and freedom.
 
 It is now undeniable that legal and extralegal means are being employed to violate our rights. This leaves the world open to backdoors, key theft, and the impersonation of trusted entities.
  Only free, publicly available, open-source software – unencumbered by shareholder obligations and political pressure – can stand against these attacks. The use of cryptography, combined with publicly transparent development and review, has the best chance of protecting our basic human rights, and the rights of every generation that follows.
