--- a/projects.html
+++ b/projects.html
@@ -86,7 +86,8 @@
 	<div id="siteMap">
 		<a href="index.html">Home
 		</a><a href="bios.html">About Us
-		</a><a href="donate.html">Why donate?
+		</a><a href="donate.html">Donate
+        </a><a href="blog.html">Blog
         </a><a href="FAQ.html">FAQ</a>
 	</div>
 </center></div>
