--- a/template.html
+++ b/template.html
@@ -13,12 +13,14 @@
 	<div class="bg zeroOne"></div>
 	<div id="headerCont" class="aboveBg smallHeader">
 		<a href="index.html"><h1>OCFA</h1></a>
-		<h2>Open Crypto Freedom Alliance</h2>
+		<h2>PropPriv</h2>
 	</div>
 	<div id="siteMap">
 		<a href="index.html">Front Page
-		</a><a href="bios.html">Who are we?
-		</a><a href="donate.html">Why donate?</a>
+		</a><a href="bios.html">About Us
+		</a><a href="donate.html">Donate</a>
+        </a><a href="blog.html">Blog
+        </a><a href="faq.html">FAQ
 	</div>
 </center></div>
 
