--- a/FAQ.html
+++ b/FAQ.html
@@ -20,7 +20,8 @@
 		<a href="index.html">Home
 		</a><a href="projects.html">Projects
 		</a><a href="bios.html">About Us
-		</a><a href="donate.html">Why donate?</a>
+		</a><a href="donate.html">Donate</a>
+        </a><a href="blog.html">Blog
 	</div>
 </center></div>
 
