Fixed some spacing
Signed-off-by: FellowTraveler <F3llowTraveler@gmail.com>

--- a/template.html
+++ b/template.html
@@ -18,9 +18,9 @@
 	<div id="siteMap">
 		<a href="index.html">Front Page
 		</a><a href="bios.html">About Us
-		</a><a href="donate.html">Donate</a>
+		</a><a href="donate.html">Donate
         </a><a href="blog.html">Blog
-        </a><a href="faq.html">FAQ
+        </a><a href="faq.html">FAQ</a>
 	</div>
 </center></div>
 
