--- a/FAQ.html
+++ b/FAQ.html
@@ -20,8 +20,8 @@
 		<a href="index.html">Home
 		</a><a href="projects.html">Projects
 		</a><a href="bios.html">About Us
-		</a><a href="donate.html">Donate</a>
-        </a><a href="blog.html">Blog
+		</a><a href="donate.html">Donate
+        </a><a href="blog.html">Blog</a>
 	</div>
 </center></div>
 
